syntax = "proto3";
package VrmProtobuf;
import "google/protobuf/wrappers.proto";

message SpringSetting
{
  // The force to return to the initial pose
  google.protobuf.FloatValue stiffness = 1;

  // Gravitational acceleration
  google.protobuf.FloatValue gravityPower = 2;

  // The direction of gravity. A gravity other than downward direction also works.
  repeated float gravityDir = 3;

  // Air resistance. Deceleration force
  google.protobuf.FloatValue dragForce = 4;
}
message Spring
{
  // Name of the Spring
  string name = 1;

  // The index of spring settings
  google.protobuf.Int32Value setting = 2;

  // The node index of spring root
  google.protobuf.Int32Value springRoot = 3;

  // The radius of spring sphere
  google.protobuf.FloatValue hitRadius = 4;

  // Colliders that detect collision with nodes start from springRoot
  repeated int32 colliders = 5;
}
message VRMCSpringBone
{
  // An array of settings.
  repeated SpringSetting settings = 1;

  // An array of springs.
  repeated Spring springs = 2;
}
